...
                android:id="@+id/msTileSubtitle"
                style="@style/Ms.Text.Label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="2dp"
                android:visibility="gone"
                tools:text="Photos, prix, stock"
                tools:visibility="visible" />
        </LinearLayout>

        <ImageView
            android:layout_width="16dp"
            android:layout_height="16dp"
...
