...
                            android:text="@string/auto_text_099"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintTop_toTopOf="parent" />
                    </androidx.constraintlayout.widget.ConstraintLayout>

                    <com.google.android.material.button.MaterialButton
                        android:id="@+id/btnCheckout"
                        style="@style/PanierButton.Checkout"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/panier_checkout_margin_top"
                        android:text="@string/auto_text_101" />
                </LinearLayout>
...
