...
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:srcCompat="@drawable/envelope" />

                <EditText
                    android:id="@+id/etEmail"
                    style="@style/AppInput.EditText"
                    android:layout_width="0dp"
                    android:hint="@string/login_email_hint"
                    android:inputType="textEmailAddress"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
...
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:srcCompat="@drawable/ic_eye_off"
                    app:tint="@color/ms_text_secondary" />

                <EditText
                    android:id="@+id/etPassword"
                    style="@style/AppInput.EditText"
                    android:layout_width="0dp"
                    android:hint="@string/login_password_hint"
                    android:inputType="textPassword"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toStartOf="@id/ivPasswordToggle"
...
            app:layout_constraintEnd_toEndOf="@id/cardPasswordField"
            app:layout_constraintStart_toStartOf="@id/cardPasswordField"
            app:layout_constraintTop_toBottomOf="@id/cardPasswordField"
            tools:visibility="visible" />

        <TextView
            android:id="@+id/tvForgotPassword"
            style="@style/AppText.Body"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/space_6"
            android:text="@string/login_forgot_password"
            android:textColor="@color/ms_text_primary"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tvPasswordError" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnLogin"
            style="@style/AppButton.Primary"
            android:layout_width="0dp"
            android:layout_marginTop="@dimen/space_10"
            android:text="@string/login_btn_label"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
...
