...
                android:contentDescription="@string/cd_edit"
                app:srcCompat="@drawable/ic_profile_edit"
                app:tint="@color/profile_edit_icon" />
        </com.google.android.material.card.MaterialCardView>

        <TextView
            android:id="@+id/tvUserName"
            style="@style/ProfileText.Name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/profile_name_margin_top"
            android:text="@string/auto_text_111"
            app:layout_constraintEnd_toEndOf="parent"
...
                        app:srcCompat="@drawable/ic_profile_chevron_right"
                        app:tint="@color/profile_chevron" />
                </androidx.constraintlayout.widget.ConstraintLayout>
            </com.google.android.material.card.MaterialCardView>

            <com.google.android.material.card.MaterialCardView
                android:id="@+id/cardAddresses"
                android:layout_width="match_parent"
                android:layout_height="@dimen/profile_menu_item_height_exact"
                android:layout_marginTop="@dimen/profile_menu_card_spacing"
                app:cardBackgroundColor="@color/profile_card_bg"
                app:cardCornerRadius="@dimen/profile_menu_card_radius"
                app:cardElevation="@dimen/profile_menu_card_elevation"
...
                        app:srcCompat="@drawable/ic_profile_chevron_right"
                        app:tint="@color/profile_chevron" />
                </androidx.constraintlayout.widget.ConstraintLayout>
            </com.google.android.material.card.MaterialCardView>

            <com.google.android.material.card.MaterialCardView
                android:id="@+id/cardHelp"
                android:layout_width="match_parent"
                android:layout_height="@dimen/profile_menu_item_height_exact"
                android:layout_marginTop="@dimen/profile_menu_card_spacing"
                app:cardBackgroundColor="@color/profile_card_bg"
                app:cardCornerRadius="@dimen/profile_menu_card_radius"
                app:cardElevation="@dimen/profile_menu_card_elevation"
...
                        app:srcCompat="@drawable/ic_profile_chevron_right"
                        app:tint="@color/profile_chevron" />
                </androidx.constraintlayout.widget.ConstraintLayout>
            </com.google.android.material.card.MaterialCardView>

            <com.google.android.material.card.MaterialCardView
                android:id="@+id/cardLogout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:minHeight="@dimen/profile_logout_height_exact"
                android:layout_marginTop="@dimen/profile_logout_top_margin"
                app:cardBackgroundColor="@color/profile_logout_bg"
                app:cardCornerRadius="@dimen/profile_logout_corner_radius"
...
