...
                android:text="@string/address_set_default_action"
                android:textColor="@color/ms_text_primary"
                android:textSize="@dimen/text_size_overline"
                android:fontFamily="@font/manrope_medium" />

            <TextView
                android:id="@+id/tvAddressEdit"
                android:layout_width="wrap_content"
                android:layout_height="@dimen/surface_button_size"
                android:layout_marginStart="8dp"
                android:background="?attr/selectableItemBackgroundBorderless"
                android:gravity="center"
                android:minWidth="@dimen/surface_button_size"
...
                android:text="@string/ms_action_edit"
                android:textColor="@color/home_text_primary"
                android:textSize="@dimen/text_size_overline"
                android:fontFamily="@font/manrope_medium" />

            <TextView
                android:id="@+id/tvAddressRemove"
                android:layout_width="wrap_content"
                android:layout_height="@dimen/surface_button_size"
                android:layout_marginStart="8dp"
                android:background="?attr/selectableItemBackgroundBorderless"
                android:gravity="center"
                android:minWidth="@dimen/surface_button_size"
...
