...
                        android:padding="@dimen/product_card_floating_button_padding"
                        app:srcCompat="@drawable/ic_home_heart_filled"
                        app:tint="@color/home_heart_active" />
                </FrameLayout>

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/btnFavoriteAddCart"
                    android:layout_width="@dimen/product_card_floating_button_size"
                    android:layout_height="@dimen/product_card_floating_button_size"
                    android:layout_gravity="bottom|end"
                    android:layout_marginEnd="@dimen/space_10"
                    android:layout_marginBottom="@dimen/space_10"
                    android:contentDescription="@string/details_add_to_cart"
...
