appId: isim.ia2y.myapplication
---
- tapOn:
    id: "isim.ia2y.myapplication:id/adminProductEditorBtnPickImage"
- extendedWaitUntil:
    visible: "Photos"
    timeout: 15000
- tapOn: "Photos"
- extendedWaitUntil:
    visible: "Photo taken on Apr 22, 2026 5:04 AM"
    timeout: 15000
- tapOn: "Photo taken on Apr 22, 2026 5:04 AM"
- extendedWaitUntil:
    visible:
      id: "isim.ia2y.myapplication:id/adminProductEditorBtnSave"
    timeout: 15000
- takeScreenshot: editor-clean-image-selected
