appId: isim.ia2y.myapplication
---
- tapOn:
    id: "isim.ia2y.myapplication:id/hostNavProfile"
- tapOn:
    id: "isim.ia2y.myapplication:id/cardAdmin"
- tapOn:
    id: "isim.ia2y.myapplication:id/adminNavProduits"
- tapOn:
    id: "isim.ia2y.myapplication:id/adminProduitsBtnAdd"
- tapOn:
    id: "isim.ia2y.myapplication:id/adminProductEditorBtnPickImage"
- tapOn: "Photo taken on Apr 15, 2026 1:09 AM"
- tapOn:
    id: "isim.ia2y.myapplication:id/adminProductEditorBtnAutofill"
- tapOn:
    id: "isim.ia2y.myapplication:id/adminProductEditorBtnSave"
- extendedWaitUntil:
    visible:
      id: "isim.ia2y.myapplication:id/adminProduitsBtnAdd"
    timeout: 45000
- takeScreenshot: admin-products-after-create
