appId: isim.ia2y.myapplication
---
- tapOn:
    id: "isim.ia2y.myapplication:id/adminProductEditorBtnPickImage"
- extendedWaitUntil:
    visible: "Photo taken on Apr 22, 2026 3:51 AM"
    timeout: 15000
- tapOn: "Photo taken on Apr 22, 2026 3:51 AM"
- extendedWaitUntil:
    visible:
      id: "isim.ia2y.myapplication:id/adminProductEditorBtnSave"
    timeout: 15000
- tapOn:
    id: "isim.ia2y.myapplication:id/adminProductEditorBtnSave"
- extendedWaitUntil:
    visible:
      id: "isim.ia2y.myapplication:id/adminProduitsBtnAdd"
    timeout: 90000
- takeScreenshot: admin-products-after-replaced-image-save
